--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
   font-family: 'Poiret One', cursive;
   overflow: hidden;
-  background: conic-gradient(from 90deg at 25% -10%, #ff4500, #d3f340, #7bee85, #afeeee, #7bee85);
+  background: linear-gradient(90deg, #1f005c, #002e85, #0053a6, #0076be, #0099cf, #00bcda, #2cdee2, #83ffeb);
 }
 
 .container{
